script tag into html & basic functions added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<h1>Změna tříd, události</h1>
 
-	<div class="ctverecek zluty"></div>
+	<div class="zluty"></div>
 
 	<div class="ctverecek zeleny"></div>
 
@@ -20,6 +20,8 @@
 	<button class="tlacitko">Čudlajs</button>
 
 	<audio src="audio/dingdingdang.mp3" preload="auto"></audio>
+
+	<script src="main.js"></script>
 
 </body>
 </html>
