count function added

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 	<h1>Změna tříd, události</h1>
 
-	<div class="zluty"></div>
+	<div onmouseover="priNajetiNaCtverec()" class="zluty"></div>
 
-	<div class="ctverecek zeleny"></div>
+	<div onmouseover="priNajetiNaCtverec()" class="ctverecek zeleny"></div>
 
 	<img class="obrazek" src="obrazky/kocka.jpg">
 
