adding heading toggle onclick

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-	<h1>Změna tříd, události</h1>
+	<h1 onclick="zmenStyl()">Změna tříd, události</h1>
 
 	<div onmouseover="priNajetiNaCtverec()" class="zluty"></div>
 
