--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro:400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onkeydown="stiskKlavesy(event)">
 
 	<h1 onclick="zmenStyl()">Změna tříd, události</h1>
 
@@ -15,6 +15,16 @@
 
 	<div onmouseover="priNajetiNaCtverec()" class="ctverecek zeleny"></div>
 
+	<p class="paragraph">V elipse spí lev.</p>
+
+	<button onclick="changeColor()" class="button">
+		Červený po kliknutí
+	</button>
+
+	<button onclick="biggerFontSize()" class="button">
+		Větší po kliknutí
+	</button>
+	
 	<img class="obrazek" src="obrazky/kocka.jpg">
 
 	<button class="tlacitko">Čudlajs</button>
